[package]
authors = ["Luca Bruno <lucab@debian.org>", "Stefan Junker <sjunker@redhat.com>"]
description = "A pure-Rust asynchronous library for Docker Registry API"
documentation = "https://docs.rs/dkregistry"
edition = "2018"
exclude = [
  ".gitignore",
  ".travis.yml",
]
keywords = ["docker", "registry", "async"]
license = "MIT OR Apache-2.0"
name = "dkregistry"
repository = "https://github.com/camallo/dkregistry-rs"
version = "0.5.0"

[package.metadata.release]
disable-publish = true
disable-push = true
post-release-commit-message = "cargo: development version bump"
pre-release-commit-message = "cargo: dkregistry release {{version}}"
sign-commit = true
tag-message = "dkregistry v{{version}}"

[dependencies]
async-stream = "0.3"
base64 = "0.13"
futures = "0.3"
http = "0.2"
libflate = "1.0"
log = "0.4"
mime = "0.3"
regex = "^1.1.0"
reqwest = {version = "0", default-features = false, features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_ignored = "0.1"
serde_json = "1"
sha2 = "^0.9.0"
strum = "0.19"
strum_macros = "0.19"
tar = "0.4"
thiserror = "1.0.19"
tokio = "1"
url = "2.1.1"

[dev-dependencies]
dirs = "3.0"
env_logger = "0.7"
mockito = "0.27"
spectral = "0.6"
test-case = "1.0.0"
tokio = {version = "1", features = ["rt-multi-thread", "rt", "macros"]}

[features]
default = ["reqwest-default-tls"]
reqwest-default-tls = ["reqwest/default-tls"]
reqwest-rustls = ["reqwest/rustls-tls"]
test-mock = []
test-net = []
test-net-private = []
